Attempt to fix background on mobile

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: auto, 100%;
+
 }
 
 h1 {
